zellij-utils/src/input/unit/snapshots/zellij_utils__input__layout__layout_test__children_not_as_first_child_of_pane_template.snap
---
source: zellij-utils/src/input/./unit/layout_test.rs
expression: "normalize_layout_debug(format!(\"{:#?}\", layout))"
---
Layout {
    tabs: [],
    focused_tab_index: None,
    template: Some(
        (
            TiledPaneLayout {
                children_split_direction: Horizontal,
                name: None,
                children: [
                    TiledPaneLayout {
                        children_split_direction: Horizontal,
                        name: Some(
                            "my pane",
                        ),
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Vertical,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: None,
                                        focus: None,
                                        external_children_index: None,
                                        children_are_stacked: false,
                                        is_expanded_in_stack: false,
                                        exclude_from_sync: None,
                                        run_instructions_to_ignore: [],
                                        hide_floating_panes: false,
                                        pane_initial_contents: None,
                                        default_fg: None,
                                        default_bg: None,
                                        restored_from: None,
                                    },
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [
                                            TiledPaneLayout {
                                                children_split_direction: Horizontal,
                                                name: None,
                                                children: [],
                                                split_size: None,
                                                run: None,
                                                borderless: None,
                                                focus: None,
                                                external_children_index: None,
                                                children_are_stacked: false,
                                                is_expanded_in_stack: false,
                                                exclude_from_sync: None,
                                                run_instructions_to_ignore: [],
                                                hide_floating_panes: false,
                                                pane_initial_contents: None,
                                                default_fg: None,
                                                default_bg: None,
                                                restored_from: None,
                                            },
                                            TiledPaneLayout {
                                                children_split_direction: Horizontal,
                                                name: None,
                                                children: [],
                                                split_size: None,
                                                run: None,
                                                borderless: None,
                                                focus: None,
                                                external_children_index: None,
                                                children_are_stacked: false,
                                                is_expanded_in_stack: false,
                                                exclude_from_sync: None,
                                                run_instructions_to_ignore: [],
                                                hide_floating_panes: false,
                                                pane_initial_contents: None,
                                                default_fg: None,
                                                default_bg: None,
                                                restored_from: None,
                                            },
                                        ],
                                        split_size: None,
                                        run: None,
                                        borderless: None,
                                        focus: None,
                                        external_children_index: None,
                                        children_are_stacked: false,
                                        is_expanded_in_stack: false,
                                        exclude_from_sync: None,
                                        run_instructions_to_ignore: [],
                                        hide_floating_panes: false,
                                        pane_initial_contents: None,
                                        default_fg: None,
                                        default_bg: None,
                                        restored_from: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: None,
                        focus: None,
                        external_children_index: None,
                        children_are_stacked: false,
                        is_expanded_in_stack: false,
                        exclude_from_sync: None,
                        run_instructions_to_ignore: [],
                        hide_floating_panes: false,
                        pane_initial_contents: None,
                        default_fg: None,
                        default_bg: None,
                        restored_from: None,
                    },
                    TiledPaneLayout {
                        children_split_direction: Horizontal,
                        name: None,
                        children: [
                            TiledPaneLayout {
                                children_split_direction: Vertical,
                                name: None,
                                children: [
                                    TiledPaneLayout {
                                        children_split_direction: Horizontal,
                                        name: None,
                                        children: [],
                                        split_size: None,
                                        run: None,
                                        borderless: None,
                                        focus: None,
                                        external_children_index: None,
                                        children_are_stacked: false,
                                        is_expanded_in_stack: false,
                                        exclude_from_sync: None,
                                        run_instructions_to_ignore: [],
                                        hide_floating_panes: false,
                                        pane_initial_contents: None,
                                        default_fg: None,
                                        default_bg: None,
                                        restored_from: None,
                                    },
                                ],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: Some(
                                    1,
                                ),
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                            },
                            TiledPaneLayout {
                                children_split_direction: Horizontal,
                                name: None,
                                children: [],
                                split_size: None,
                                run: None,
                                borderless: None,
                                focus: None,
                                external_children_index: None,
                                children_are_stacked: false,
                                is_expanded_in_stack: false,
                                exclude_from_sync: None,
                                run_instructions_to_ignore: [],
                                hide_floating_panes: false,
                                pane_initial_contents: None,
                                default_fg: None,
                                default_bg: None,
                                restored_from: None,
                            },
                        ],
                        split_size: None,
                        run: None,
                        borderless: None,
                        focus: None,
                        external_children_index: None,
                        children_are_stacked: false,
                        is_expanded_in_stack: false,
                        exclude_from_sync: None,
                        run_instructions_to_ignore: [],
                        hide_floating_panes: false,
                        pane_initial_contents: None,
                        default_fg: None,
                        default_bg: None,
                        restored_from: None,
                    },
                ],
                split_size: None,
                run: None,
                borderless: None,
                focus: None,
                external_children_index: None,
                children_are_stacked: false,
                is_expanded_in_stack: false,
                exclude_from_sync: None,
                run_instructions_to_ignore: [],
                hide_floating_panes: false,
                pane_initial_contents: None,
                default_fg: None,
                default_bg: None,
                restored_from: None,
            },
            [],
        ),
    ),
    swap_layouts: [],
    swap_tiled_layouts: [],
    swap_floating_layouts: [],
}
